# command-line-rust

./: README.md
calr/src/: main.rs
catr/: Cargo.toml
catr/src/: lib.rs
commr/src/: main.rs
cutr/: Cargo.toml
cutr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs
fortuner/src/: main.rs
grepr/src/: main.rs
grepr/tests/: cli.rs
headr/: Cargo.toml  README.md
headr/src/: lib.rs
lsr/src/: main.rs
tailr/src/: main.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs
wcr/: Cargo.toml
wcr/src/: lib.rs
