[package]
name = "cutr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
pretty_assertions = "1.4.0"
